--- a/.github/workflows/snyk-node.yml
+++ b/.github/workflows/snyk-node.yml
@@ -2,7 +2,7 @@ name: snyk
 on: push
 jobs:
   security:
-    runs-ons: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
