--- a/.github/workflows/snyk-node.yml
+++ b/.github/workflows/snyk-node.yml
@@ -9,3 +9,5 @@ jobs:
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK }}
+        with:
+          args: --severity-threshold=high
